--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,5 +5,6 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-  - script: echo "Hello, Azure Pipelines!"
+  - script: echo "Verificacion conectividad con Tosca"
+  ping -c 4 10.192.221.33
     displayName: 'Ejecutar script de prueba'
