Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,5 @@ steps:
       --header 'Content-Type: application/x-www-form-urlencoded' \
       --data-urlencode 'grant_type=client_credentials' \
       --data-urlencode 'client_id=hSw__vACjU6VXjUOPjHf6Q' \
-      --data-urlencode 'client_secret=iPAlqwjlrEGXqHrCY8RZrQOS2CpEL1eUWiNC9ORxlsPw' -v
+      --data-urlencode 'client_secret=iPAlqwjlrEGXqHrCY8RZrQOS2CpEL1eUWiNC9ORxlsPw' -k -v
   displayName: Verificar conectividad con Tosca Server
