--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
 
   - script: |
       echo "Step 2: Ejecutar Automación en Tosca"
+      echo $TOKEN
 
       EXECUTION_RESPONSE=$(curl -s -X POST "$(TOSCA_URL)/automationobjectservice/api/Execution/Enqueue" \
         -H "Authorization: Bearer $TOKEN" \
@@ -41,6 +42,6 @@ steps:
           ],
           "importResult": true,
           "creator": "$(CREATOR)"
-        }')
+        }' -k -v)
 
       echo "Respuesta de la ejecución: $EXECUTION_RESPONSE"
