--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
         exit 1
       fi
       echo "Token:  $TOKEN"
+      echo"##vso[task.setvariable variable=TOKEN]$TOKEN"
 
   - script: |
       echo "Step 2: Ejecutar Automación en Tosca"
