Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
         exit 1
       fi
       echo "Token:  $TOKEN"
+      echo "TOKEN=$TOKEN" >> $(TOKEN)
 
   - script: |
       echo "Step 2: Ejecutar Automación en Tosca"
